Fix overflow and alignment of calculator screen

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,7 @@
     --main-color: #ffffff;
     --equals: #018645;
 }
+
+.rtl {
+    direction: rtl;
+}
